<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.waibleapp.waible.fragments.SignUpFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_logo_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp" />

        <EditText
            android:id="@+id/full_name_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/full_name_edit_text"/>

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/email_edit_text"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/password_edit_text"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_up_button"/>

        <TextView
            android:id="@+id/sign_in_text_view"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_text_view"/>

    </LinearLayout>

</FrameLayout>
