<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.waibleapp.waible.fragments.SignInFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/app_logo_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <EditText
            android:id="@+id/emain_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/email_edit_text"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/password_edit_text"/>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_button"/>

        <TextView
            android:id="@+id/sign_up_text_view"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:text="@string/sign_up_text_view"
            android:textSize="18sp"
            android:textAlignment="center" />
    </LinearLayout>

</FrameLayout>
